# CC-SE-Project

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.assignment3  Dockerfile.diets  Dockerfile.meals  README.md  diesel.toml  docker-compose.assn3.yml  docker-compose.yml  haproxy.cfg  install.sh  query.txt  response.txt  tester.py
.github/workflows/: assignment3.yml
migrations/2023-04-15-090905_dish/: down.sql  up.sql
migrations/2023-05-22-094031_diet/: down.sql  up.sql
src/: db.rs  diets_api.rs  dishes_routes.rs  main.rs  meals_api.rs  meals_routes.rs  models.rs  ninjas_api.rs  routes.rs  schema.rs
src/diets/: diets_routes.rs  mod.rs  models.rs
src/meals/: diet_client.rs  dishes_routes.rs  meals_routes.rs  mod.rs  models.rs  ninjas_api.rs
tests/: assn3_tests.py  querys.py
