[package]
name = "meals_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }
dotenv = "0.15.0"
actix-web = "4"
serde = { version= "1.0", features = ["derive"]}
serde_json = "1.0"
custom_derive ="0.1.7"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
lazy_static = "1.4.0"
futures = "0.3.17"

