[package]
name = "meals_api"
version = "0.2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "meals_api"
path = "src/meals_api.rs"

[[bin]]
name = "diets_api"
path = "src/diets_api.rs"

[dependencies]
diesel = { version = "2.0.0", features = ["postgres", "r2d2"] }
diesel_migrations = "2.0.0"
dotenv = "0.15.0"
actix-web = "4"
serde = { version= "1.0", features = ["derive"]}
serde_json = "1.0"
custom_derive ="0.1.7"
reqwest = { version = "0.11.16", features = ["json", "blocking"] }
lazy_static = "1.4.0"
futures = "0.3.17"
r2d2 = "0.8.10"
env_logger = "0.10.0"

